[package]
name = "rsmgp-example-parallel"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c_str_macro = "1.0.2"
rsmgp-sys = { path = "../rsmgp-sys" }
rayon = "1.5"

[lib]
name = "rust_example_parallel"
crate-type = ["cdylib"]
