[package]
name = "rsmgp-sys"
version = "0.1.0"
authors = ["Marko Budiselic <marko.budiselic@memgraph.com>"]
edition = "2018"

[dependencies]
c_str_macro = "1.0.2"
snafu = "0.6.10"
mockall_double = "0.2.0"

[dev-dependencies]
mockall = "0.9.1"
serial_test = "0.5.1"
libc = "0.2.95"

[build-dependencies]
bindgen = "0.57.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
